# ksp_ss2022

./: CMakeLists.txt
aufgaben/a0/: CMakeLists.txt  a.out  njvm.c
aufgaben/a2/: prog1.asm
aufgaben/a3/: model.txt
aufgaben/a8/: factorn.asm  factororiginal.txt
hausuebung/: CMakeLists.txt
hausuebung/njvm/: mknjvm  njvm
hausuebung/njvm/bigint/include/: support.h
hausuebung/njvm/src/: StackSlot.h  execute.c  execute.h  garbCollect.c  garbCollect.h  instructions.c  instructions.h  instructs.c  instructs.h  my.txt  njvm  njvm.c  opCodes.h  programs.c  programs.h  stack.c  stack.h  test.asm  test1
hausuebung/njvm/src/bigint/include/: bigint.c  bigint.h  support.c  support.h
hausuebung/njvm/src/bigint/lib/: libbigint.h
hausuebung/njvm/src/bigint/src/: bigint.c  support.h
hausuebung/njvm/src/testbin/: prog12.txt
